<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_why_us"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_why_us" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_contact_us" />
    </group>

    <item android:title="@string/our_services">
        <menu>
            <item
                android:id="@+id/nav_web_development"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_web_development" />
            <item
                android:id="@+id/nav_digital_services"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_digital_services" />
            <item
                android:id="@+id/nav_mobile_apps"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_mobile_apps" />
            <item
                android:id="@+id/nav_cloud_apps"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_cloud_apps" />
        </menu>
    </item>

</menu>
